[MP Planner] Test Mockito lib and refactoring